# pachyderm

./: .bazel_fix_commands.json  .bazelignore  .bazelrc  .bazelversion  .dockerignore  .drone.yml  .env  .env.development  .env.mock  .env.production  .env.test  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .golangci.yml  .goreleaser.yml  .goxc.json  .goxc.json.template  .ignore  .npmignore  .prettierrc.yml  .rgignore  .spelling  .swcrc  .testfaster.yml  .travis.yml  2023-05-30_trace_slow_upload.json  BAZEL.md  BUILD.bazel  CHANGELOG-1.x.md  CHANGELOG.md  CLA  CLA.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile-pachd-skaffold  Dockerfile-pachd-skaffold.dockerignore  Dockerfile-worker-skaffold  (+140 more)
console/: .dockerignore  .env.development.sample  .env.mock  .env.production  .env.test  .gitignore  BAZEL.md  BUILD.bazel  CODEOWNERS  Dockerfile  Makefile  README.md  README_Development.md  README_Pachyderm.md  cypress.config.ts  enterpriseProxyHelmValues.yaml  jest.config.base.js  package-lock.json  package.json  pnpm-lock.yaml  version.json
console/api-throughput-test/: package-lock.json  package.json  projectSetup.js  webpack.config.js
console/backend/: BUILD.bazel  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
console/cypress/: .eslintrc.json  package.json  tsconfig.json
console/frontend/: .eslintignore  .eslintrc.js  .gitignore  BUILD.bazel  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
console/scripts/: install-matching-pachyderm-version.sh
etc/benchmark-uploads/: BUILD.bazel  main.go
etc/ci-image/: BUILD.bazel  Dockerfile.tmpl  push.sh  run.sh
etc/generate-envoy-config/: BUILD.bazel  Makefile  envoy-tls.jsonnet  envoy.jsonnet  envoy.libsonnet  pachyderm-services.libsonnet
etc/helm/: .gitignore  BUILD.bazel  Makefile  README.md  RELEASE.md  go.mod  go.sum  go.sum.license  kubeconform.sh  local-dev-values.yaml  reset.sh  test.yaml
etc/proto/: BUILD.bazel  Dockerfile  build.sh  go.mod  go.sum  link_grpc_client.go  run  run.sh  test_no_changes.sh
etc/testing/: BUILD.bazel  blacklist.txt  circle_tests.sh  circle_tests_inner.sh  cleanup.go  collect_junit.sh  docker-cache.sh  examples.sh  forward-postgres.sh  gatekeeper.yaml  helm-values-openshift.yaml  kube_debug.sh  lint.sh  local.sh  minio-openshift.yaml  minio.yaml  mysql.yaml  opa-constraints.yaml  pach-travis-86b9f180aa16.json.enc  passing_test_regex.sh  pfs_server.sh  port-forward.sh  print-results.sh  report_junit.sh  rootless_test.sh  start-local.sh  start_postgres.sh  test-auth-setup.sh  test_pfs_server.sh  test_tls.sh  test_worker.sh  testctl-rsync-pull.sh  testctl-rsync.sh  testctl-ssh.sh  travis-batch-test-b2543bf99978.json.enc  travis.sh  travis_after_success.sh  travis_before_cache.sh  travis_before_install.sh  travis_build.sh  (+14 more)
etc/worker/: BUILD.bazel  Dockerfile  guest.sh  init.go  init.sh  worker.sh
examples/opencv/: BUILD.bazel  Dockerfile  Makefile  README.md  demo-script.md  edges-union.pipeline.json  edges-update-newinput.pipeline.json  edges-update-noinput.pipeline.json  edges-update.pipeline.json  edges-update2.pipeline.json  edges.json  edges.pipeline.json  edges.py  histogram.json  histogram.py  images.txt  images2.txt  index.ts  montage.json  montage.pipeline.json  pachd.logs  requirements-lock.txt  requirements.txt  setup-demo.sh
jupyter-extension/: .dockerignore  .eslintrc.js  .gitignore  BAZEL.md  BUILD.bazel  CHANGELOG.md  Dockerfile  Dockerfile.transformers  MANIFEST.in  MODULE.bazel  README.md  RELEASE.md  WORKSPACE  ci-requirements.txt  cypress.config.js  cypress.json  gazelle_python.yaml  install.json  jest.config.js  jest.setup.js  package-lock.json  package.json  pyproject.toml  requirements-dev-lock-darwin.txt  requirements-dev-lock-linux.txt  requirements-dev-lock.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.cfg  setup.py
jupyter-extension/infra/: Pulumi.yaml  go.mod  main.go  root.py
jupyter-extension/jupyterlab_pachyderm/: BUILD.bazel  __init__.py  dev_server.py  env.py  filemanager.py  handlers.py  log.py  mount_server_client.py  pachyderm.py  pachyderm_sdk  pfs_manager.py  pps_client.py
jupyter-extension/schema/: help.json  mount.json
jupyter-extension/scripts/: config.sh  force-jupyter  force-jupyter-tests  integration_tests_setup.sh  jest.setup.js  jhub-dev-helm-values.yml  run_check_manifest.py
jupyter-extension/src/: global.d.ts  index.ts  setupTests.ts
jupyter-extension/style/: base.css
jupyter-pipeline-extension/: .eslintignore  .eslintrc.js  Dockerfile  LICENSE  MANIFEST.in  README.md  babel.config.js  ci-requirements.txt  package-lock.json  pyproject.toml  setup.py  tsconfig.json
jupyter-pipeline-extension/jupyterlab_pachyderm/: env.py  filemanager.py
jupyter-pipeline-extension/schema/: telemetry.json
jupyter-pipeline-extension/scripts/: jupyter_server_test_config.py
jupyter-pipeline-extension/src/: handler.ts  index.ts
oci/: BUILD.bazel  adjust_dumb_init.awk  adjust_pachctl.awk  adjust_pachd.awk  adjust_worker.awk  adjust_worker_init.awk  pachctl_image_test.yaml  pachd_image_test.yaml  transition.bzl  worker_image_test.yaml
private/apt/: BUILD.bazel  apt.lock.json  apt.yaml  postgres.lock.json  postgres.yaml
python-sdk/: .dockerignore  .gitignore  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Dockerfile.datum-batching-test  Dockerfile.docs-generation  Makefile  README.md  entrypoint.sh  example.py  generate-protos.sh  poetry.toml  pyproject.toml
python-sdk/cdr_perf/: generate_dataset.py  main.py
python-sdk/docs/: entrypoint.sh  generate.py
python-sdk/pachyderm_sdk/: __init__.py  __main__.py  _classproperty.py  batch_datums.py  client.py  config.py  constants.py  datum_batching.py  errors.py  interceptor.py
python-sdk/proto/: Dockerfile  entrypoint.sh  generate-protos.sh
python-sdk/tests/: fixtures.py  metadata.py  test_auth.py  test_cdr.py  test_client.py  test_config.py  test_debug.py  utils.py  (+10 more)
src/: BUILD.bazel  client.ts  foo.go  force-core  force-core-tests  global.d.ts  handler.ts  index.ts  setupTests.ts
(+14469 files in other folders)
