load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test", "buildozer_binary")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library", "nogo")

licenses(["notice"])

exports_files([
    "LICENSE",
    ".bazelversion",
    "MODULE.bazel",
])

# Configure supported architectures.  Note that some architectures are only supported for tooling
# reasons; you can run protoc Windows, but you can't run Pachyderm or pachctl on Windows.  Which
# tools are available on which architectures is a product of the upstream projects; even though most
# upstream projects are written in Go and could theoretically run anywhere Go can, we still use
# their release binaries so as to not build them with "weird" versions of dependencies that we use
# in Pachyderm and cause unexpected behavior.  Where Pachyderm itself is available is a product
# decision; linux/amd64 and linux/arm64 only.  Where pachctl is available is a product decision;
# linux/amd64, linux/arm64, darwin/amd64, darwin/arm64 only.  We are open to being convinced to make
# different product decisions, of course!

config_setting(
    name = "is_x86_64_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "is_aarch64_linux",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

config_setting(
    name = "is_x86_64_macos",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "is_aarch64_macos",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "is_aarch64",
    constraint_values = [
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "is_x86_64",
    constraint_values = [
        "@platforms//cpu:x86_64",
    ],
)

# Add gazelle for "bazel run gazelle -- ..."

# gazelle:python_extension disabled
gazelle_binary(
    name = "custom_gazelle_binary",
    languages = [
        "@gazelle//language/go",  # Built-in rule from gazelle for Golang.
        "@gazelle//language/proto",  # Built-in rule from gazelle for Protos.
        "@rules_python_gazelle_plugin//python",  # Use gazelle from rules_python.
    ],
    visibility = ["//visibility:public"],
)

# gazelle:prefix github.com/pachyderm/pachyderm/v2
# gazelle:proto disable_global
gazelle(
    name = "gazelle",
    build_tags = ["bazel"],
    gazelle = "//:custom_gazelle_binary",
)

# Configure nogo (a linter that runs next to the compiler).
nogo(
    name = "nogo",
    config = "nogo.json",
    vet = True,
    visibility = ["//visibility:public"],  # must have public visibility
)

# Buildifier formats all BUILD files in the workspace.
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
    ],
    mode = "fix",
)

# This test checks that all BUILD files (etc.) are formatted correctly.  Run "bazel run
# //:buildifier" to auto-fix them.
buildifier_test(
    name = "buildifier_test",
    size = "small",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "diff",
    no_sandbox = True,
    tags = ["style"],
    workspace = "//:MODULE.bazel",
)

# Run the buildozer command.
buildozer_binary(
    name = "buildozer",
)

# go for "go doc" or "go mod tidy"; invoke those as "bazel run go -- mod tidy" or similar.
alias(
    name = "go",
    actual = "@rules_go//go",
)

# An alias for regeneating protos.
alias(
    name = "make_proto",
    actual = "//src/proto:run",
)

go_library(
    name = "pachyderm",
    srcs = ["pachyderm.go"],
    importpath = "github.com/pachyderm/pachyderm/v2",
    visibility = ["//visibility:public"],
)

alias(
    name = "pachctl",
    actual = "//src/server/cmd/pachctl",
)

test_suite(
    name = "privileged_tests",
    tags = ["manual"],
    tests = [
        "//src/server/pfs/cmds:cmds_integration_test",
        "//src/server/pfs/fuse:fuse_test",
    ],
)

# Style tests are style tests that have to be run manually, because they look at a lot of files in
# the workspace.  Hermetic style tests (that depend on a few named files, for example) don't need to
# be added here.  If the original test doesn't have the "manual" tag, you don't need to add it here.
test_suite(
    name = "style_tests",
    tags = [
        "manual",
        "style",
    ],
    tests = [
        ":buildifier_test",
        "//jupyter-extension:gazelle_python_manifest.test",
        "//src/proto:run_test",
    ],
)

# pnpm for running npm commands
alias(
    name = "pnpm",
    actual = "@pnpm//:pnpm",
)
