[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux, Mac OS X, Windows
classifiers =
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Framework :: Jupyter
  Framework :: Jupyter :: JupyterLab
  Framework :: Jupyter :: JupyterLab :: 3
  Framework :: Jupyter :: JupyterLab :: Extensions
  Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
packages = find:
install_requires =
  jupyter_server>=1.6,<2
include_package_data = True
zip_safe = False
python_requires = >=3.7,<4

[options.extras_require]
dev=
  black
  jupyter_packaging~=0.10.0,<2
  jupyterlab>=3.0.14
  pre-commit
  pytest
  pytest-asyncio
  pytest-tornasync
  python-pachyderm>=v7.3.0,<8
